--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="intro">
             <h2>Web &amp; Graphic Designer!</h2>
             <button>Learn More</button>
-            login form
+            Login Form
           </div>
         </div>
       </div>
